<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/more_first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/emptyText">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/prime"
                android:theme="@style/text_views" />

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/prime"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/gifting"
                android:theme="@style/text_views" />

            <ImageView
                android:id="@+id/ivElectronics"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/gifting"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/deals"
                android:theme="@style/text_views" />

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/deals"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/emptyText2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/more_first_row" />


    <LinearLayout
        android:id="@+id/more_second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/emptyText2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/groceries"
                android:theme="@style/text_views" />

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/groceries"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/drugstore"
                android:theme="@style/text_views" />

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/drugstore"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/pets"
                android:theme="@style/text_views" />

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/pets"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/emptyText3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/more_second_row" />


    <LinearLayout
        android:id="@+id/more_third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/emptyText3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fashion"
                android:theme="@style/text_views" />

            <ImageView
                android:id="@+id/ivBooks"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/fashion"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/home"
                android:theme="@style/text_views" />

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/home_decor"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/devices"
                android:theme="@style/text_views" />

            <ImageView
                android:id="@+id/ivClothing"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/devices"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/emptyText4"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/more_third_row" />

    <LinearLayout
        android:id="@+id/button_row_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyText4">

        <Button
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/white"
            android:text="@string/orders"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/white"
            android:text="@string/buy_again"
            android:textColor="@color/black"
            android:maxLines="1"
            android:textSize="12sp"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/white"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <Button
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/white"
            android:text="@string/lists"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>